<resources>
    <string name="app_name">MPR</string>

    <string name="button">Click</string>

    <string name="spin">Spin</string>
    <string name="turn_around">Turn around</string>
    <string name="jump">Jump</string>
    <string name="kiss">Kiss</string>
    <string name="blink">Blink</string>
    <string name="bounce">Bounce</string>
    <string name="revert">Revert</string>
    <string name="clap">Clap</string>
    <string name="star">Star</string>
    <string name="ball">Ball</string>
    <string name="kiss_popup">Kiss popup</string>
    <string name="star_circle">Star circle</string>
    <string name="ball_circle">Ball circle</string>

    <string name="welcome">Welcome!</string>
    <string name="MyTube_guide">Enter link to video then click Play</string>
    <string name="icon">icon</string>
    <string name="type_field">Link to video</string>

    <string name="MyFriends_guide">Click item for actions, (+) for adding another friend</string>
    <string name="new_friend">New Friend</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">English</string>
    <string name="engWelcome">Welcome, Belemon!</string>
    <string name="vieWelcome">Chào mừng bạn, Belemon!</string>

    <string name="note">Enter the content of note here</string>
    <string name="add_note">Add new note</string>

    <string name="welcome_to_codee">Welcome to Codee!</string>
    <string name="start">Start !</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="your_awesome_name">Your awesome name?</string>
    <string name="contact_codee">Contact Codee</string>

    <string name="zingmp3">ZingMP3</string>
    <string name="baomoi">Báo Mới</string>
    <string name="pccovid">PC Covid</string>
    <string name="vnexpress">VnExpress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>