<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".tutorials.tut9.Tut9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/zingmp3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="8dp"
                android:src="@drawable/zingmp3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zingmp3"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pccovid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/zingmp3"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="8dp"
                android:src="@drawable/pccovid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pccovid"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/baomoi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zingmp3">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="8dp"
                android:src="@drawable/baomoi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baomoi"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vnexpress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:background="@drawable/white_rectangle_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/baomoi"
            app:layout_constraintTop_toBottomOf="@id/pccovid">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="8dp"
                android:src="@drawable/vnexpress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vnexpress"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>